--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "lint": "./node_modules/.bin/eslint . bin/serverless-artillery",
     "fix": "./node_modules/.bin/eslint --fix . bin/serverless-artillery",
     "postinstall": "node ./postinstall.js",
-    "publish": "./node_modules/.bin/np"
+    "publish": "./node_modules/.bin/np",
+    "snyk-protect": "snyk protect",
+    "prepare": "npm run snyk-protect"
   },
   "repository": {
     "type": "git",
@@ -49,7 +51,8 @@
     "rimraf": "^2.6.3",
     "semver": "^5.5.0",
     "shortid": "^2.2.14",
-    "yargs": "^11.1.0"
+    "yargs": "^11.1.0",
+    "snyk": "^1.189.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
@@ -97,5 +100,6 @@
     ],
     "cache": true,
     "all": true
-  }
+  },
+  "snyk": true
 }
